--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     path: ..
   flutter:
     sdk: flutter
+  flutter_widget_from_html: ^0.5.1+5
 
 dev_dependencies:
   flutter_test:
