--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,21 +9,21 @@ environment:
 
 dependencies:
   # Plugin for parsing html
-  html: ^0.14.0+3
+  html: ^0.14.0+4
 
   # Plugins for parsing css
   csslib: ^0.16.2
   css_colors: ^1.0.2
 
   # Plugins for rendering the <video> tag.
-  video_player: ^1.0.1
-  chewie: ^0.12.0
+  video_player: ^0.10.1
+  chewie: ^0.9.10
 
   # Plugin for rendering the <iframe> tag.
   webview_flutter: ^1.0.0
 
   # Plugins for rendering the <audio> tag.
-  chewie_audio: ^1.1.1
+  chewie_audio: ^1.0.0+1
 
   # Plugins for rendering the <svg> tag.
   flutter_svg: ^0.19.0
